Added Shearing to Taming XP

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -206,6 +206,8 @@ Experience:
         Iron: 250
         End_Stone: 150
         Moss_Stone: 30
+    Taming:
+        Shearing: 250
 
 #
 #  Settings for Fishing
