Cleaned up some command issues. Renamed /stats to /mcstats for less plugin conflicts

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1111,7 +1111,7 @@ Commands:
         Enabled: true
     accept:
         Enabled: true
-    stats:
+    mcstats:
         Enabled: true
     mcability:
         Enabled: true
