Get Taming XP for milking cows.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -219,6 +219,7 @@ Experience:
         Shearing: 250
         Animal_Taming:
             Wolf: 250
+        Milking: 50
 
 #
 #  Settings for Fishing
