Added /addlevels command (Implements MCCORE-23)

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1134,6 +1134,8 @@ Commands:
         Enabled: true
     addxp:
         Enabled: true
+    addlevels:
+        Enabled: true
     clearmyspawn:
         Enabled: true
     ptp:
