--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -223,7 +223,22 @@ Experience:
         Animal_Taming:
             Wolf: 250
         Milking: 50
-
+    Combat:
+        Multiplier:
+            Animals: 1.0
+            Creeper: 4.0
+            Skeleton: 2.0
+            Spider: 3.0
+            Zombie: 2.0
+            Pig_Zombie: 3.0
+            Enderman: 2.0
+            Cave_Spider: 3.0
+            Silverfish: 3.0
+            Blaze: 3.0
+            Magma_Cube: 2.0
+            Ender_Dragon: 8.0
+            Slime: 2.0
+            Ghast: 3.0
 #
 #  Settings for Fishing
 ###
