Replacing Whois command with Inspect command

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -259,7 +259,7 @@ Commands:
         Enabled: true
     xplock:
         Enabled: true
-    whois:
+    inspect:
         Enabled: true
     mcc:
         Enabled: true
